--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-annotations:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.afollestad:sectioned-recyclerview:0.2.3'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
