add send bar to bottom of message list

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ COMPILE_SDK=24
 BUILD_TOOLS_VERSION=24.0.0
 USE_JACK=false
 ANDROID_SUPPORT_VERSION=24.0.0
-ANDROID_GRADLE_VERSION=2.2.0-alpha3
+ANDROID_GRADLE_VERSION=2.1.0
