--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.getkeepsafe.dexcount'
-apply from: 'jacoco.gradle'
+//apply from: 'jacoco.gradle'
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
