create initial load activity to request permissions and fill database with conversation data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.InitialLoadActivity"/>
+
     </application>
 
 </manifest>
