--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
-        android:theme="@style/AppTheme.DayNight">
+        android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.MessengerActivity">
+        <activity android:name=".activity.MessengerActivity"
+            android:theme="@style/AppTheme.MessengerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
