--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.klinkerapps:android-smsmms:3.1.0'
+    compile 'com.klinkerapps:link_builder:1.3.2'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
