--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,8 @@
             </intent-filter>
         </service>
 
+        <service android:name=".service.NotificationService" />
+
     </application>
 
 </manifest>
