support replying to notifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,7 @@
 
         <service android:name=".service.NotificationService" />
         <service android:name=".service.NotificationDismissedService" />
+        <service android:name=".service.ReplyService" />
 
     </application>
 
