--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.klinkerapps:android-smsmms:3.1.0'
     compile 'com.klinkerapps:link_builder:1.3.2'
+    compile 'com.klinkerapps:android-chips:1.0.2@aar'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
