support sending messages from compose screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activity.ComposeActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label=" ">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <action android:name="android.intent.action.SENDTO" />
@@ -59,10 +64,6 @@
                 <data android:scheme="mmsto" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.ComposeActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:label=" "/>
 
         <activity android:name=".activity.InitialLoadActivity"/>
 
