start contact customization

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
         </activity>
 
         <activity android:name=".activity.InitialLoadActivity"/>
+        <activity android:name=".activity.ContactSettingsActivity"
+            android:theme="@style/AppTheme.NoColors"/>
 
         <service android:name="com.android.mms.transaction.TransactionService" />
 
