--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="text/plain" />
             </intent-filter>
+            <meta-data
+                android:name="android.service.chooser.chooser_target_service"
+                android:value=".service.MessengerChooserTargetService" />
         </activity>
 
         <activity android:name=".activity.InitialLoadActivity"/>
@@ -81,6 +84,15 @@
             android:label="@string/menu_settings"/>
 
         <service android:name="com.android.mms.transaction.TransactionService" />
+
+        <service
+            android:name=".service.MessengerChooserTargetService"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_CHOOSER_TARGET_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.chooser.ChooserTargetService" />
+            </intent-filter>
+        </service>
 
         <receiver
             android:name=".receiver.SmsReceivedReceiver"
