--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     compile 'com.klinkerapps:link_builder:1.3.2'
     compile 'com.klinkerapps:android-chips:1.0.2@aar'
     compile 'com.larswerkman:lobsterpicker:1.0.1'
+    compile 'com.github.chrisbanes:PhotoView:1.2.7'
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0"
