--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,6 +103,7 @@ dependencies {
     compile "com.android.support:percent:${ANDROID_SUPPORT_VERSION}"
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
+    compile 'com.afollestad:easyvideoplayer:0.2.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.klinkerapps:android-smsmms:3.1.0'
     compile 'com.klinkerapps:link_builder:1.3.2'
