--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "https://dl.bintray.com/drummer-aidan/maven" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
     }
