--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
         maven { url "https://dl.bintray.com/drummer-aidan/maven" }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
+        flatDir { dirs '../libs' }
     }
 }
 
