--- a/giphy/build.gradle
+++ b/giphy/build.gradle
@@ -40,9 +40,18 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    lintOptions {
+        abortOnError true
+        disable 'IconMissingDensityFolder'
+        textOutput 'stdout'
+        xmlReport false
+        htmlReport true
     }
 }
 
