--- a/giphy/build.gradle
+++ b/giphy/build.gradle
@@ -45,7 +45,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name:'searchview', ext:'aar')
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
