working scheduled messages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -181,6 +181,7 @@
         <service android:name=".service.NotificationDismissedService" />
         <service android:name=".service.ReplyService" />
         <service android:name=".service.ContentObserverService" />
+        <service android:name=".service.ScheduledMessageService" />
 
         <!-- Widget -->
         <receiver android:name=".widget.MessengerAppWidgetProvider">
