--- a/api/build.gradle
+++ b/api/build.gradle
@@ -14,4 +14,14 @@
  * limitations under the License.
  */
 
-include ':app', ':giphy', ':api'
+apply plugin: 'java'
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
+
+dependencies {
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+
+    testCompile 'junit:junit:4.12'
+}
