--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ android {
             versionNameSuffix "-DEBUG"
             signingConfig signingConfigs.debug
         }
+        staging {
+            versionNameSuffix "-STAGING"
+            signingConfig signingConfigs.debug
+        }
         release {
             minifyEnabled true
             shrinkResources true
@@ -118,6 +122,7 @@ dependencies {
     compile "com.googlecode.mp4parser:isoparser:1.0.2"
     compile "com.github.lassana:continuous-audiorecorder:1.3.0"
 
+    compile project(":api")
     compile project(":giphy")
 
     testCompile 'junit:junit:4.12'
