--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -25,6 +25,9 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
@@ -36,7 +39,7 @@ android {
 
     lintOptions {
         abortOnError true
-        disable 'IconMissingDensityFolder'
+        disable 'InvalidPackage'
         textOutput 'stdout'
         xmlReport false
         htmlReport true
@@ -44,10 +47,6 @@ android {
 }
 
 dependencies {
-    compile 'com.miguelcatalan:materialsearchview:1.4.0'
-    compile "com.android.support:recyclerview-v7:${ANDROID_SUPPORT_VERSION}"
-    compile "com.android.support:cardview-v7:${ANDROID_SUPPORT_VERSION}"
-    compile 'com.afollestad:sectioned-recyclerview:0.2.3'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.klinkerapps:simple_videoview:1.2.0'
+    compile project(":api")
+    compile project(":encryption")
 }
