--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,7 @@ dependencies {
     compile "com.googlecode.mp4parser:isoparser:1.0.2"
     compile "com.github.lassana:continuous-audiorecorder:1.3.0"
 
-    compile project(":api")
+    compile project(":api_implementation")
     compile project(":giphy")
 
     testCompile 'junit:junit:4.12'
