--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,4 @@
  * limitations under the License.
  */
 
-include ':app', ':giphy', ':api'
+include ':app', ':giphy', ':api', ':encryption', ':api_implementation'
