--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     compile "com.github.lassana:continuous-audiorecorder:1.3.0"
 
     compile project(":api_implementation")
+    compile project(":encryption")
     compile project(":giphy")
 
     testCompile 'junit:junit:4.12'
