--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -40,7 +40,7 @@ android {
 
     lintOptions {
         abortOnError true
-        disable 'InvalidPackage'
+        disable 'InvalidPackage', "UnusedAttribute"
         textOutput 'stdout'
         xmlReport false
         htmlReport true
