--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile project(":api")
     compile project(":encryption")
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
 }
