--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -20,6 +20,20 @@
     <application >
         <activity android:name=".LoginActivity"
             android:theme="@style/api_Theme.AppCompat.Translucent"/>
+        <service
+            android:name=".MessengerFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".MessengerFirebaseInstanceIDService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
