--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_VERSION"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.4.3'
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
