register a device after signing up or logging in

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,8 @@ android {
     lintOptions {
         abortOnError true
         disable 'GoogleAppIndexingWarning', 'AllowBackup', 'IconMissingDensityFolder',
-                'InconsistentLayout', 'InvalidPackage', 'TrustAllX509TrustManager'
+                'InconsistentLayout', 'InvalidPackage', 'TrustAllX509TrustManager',
+                'UnusedResources'
         textOutput 'stdout'
         xmlReport false
         htmlReport true
