start api download service for syncing messages for account on secondary devices

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -182,6 +182,8 @@
         <service android:name=".service.ReplyService" />
         <service android:name=".service.ContentObserverService" />
         <service android:name=".service.ScheduledMessageService" />
+        <service android:name=".service.ApiUploadService" />
+        <service android:name=".service.ApiDownloadService" />
 
         <!-- Widget -->
         <receiver android:name=".widget.MessengerAppWidgetProvider">
