--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.2.7'
     compile "com.googlecode.mp4parser:isoparser:1.0.2"
     compile "com.github.lassana:continuous-audiorecorder:1.3.0"
+    compile 'com.google.firebase:firebase-crash:9.4.0'
 
     compile project(":api_implementation")
     compile project(":encryption")
