allow for syncing blacklists between devices using fcm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,6 +184,14 @@
             </intent-filter>
         </receiver>
 
+
+        <receiver android:name=".receiver.FirebaseMessageReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="xyz.klinker.messenger.api.implementation.MESSAGE_RECEIVED" />
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".service.HeadlessSmsSendService"
             android:exported="true"
