don't redraw login activity when hardware keyboard is activated

--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
     <application>
         <activity
             android:name=".LoginActivity"
-            android:theme="@style/api_Theme.AppCompat.Translucent" />
+            android:theme="@style/api_Theme.AppCompat.Translucent"
+            android:configChanges="keyboardHidden"/>
 
         <service
             android:name=".MessengerFirebaseMessagingService"
