don't redraw conversation activity when hardware keyboard is activated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
         <activity
             android:name=".activity.MessengerActivity"
             android:theme="@style/AppTheme.MessengerActivity"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:configChanges="keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
