allow staging build to be debuggable

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ android {
         }
         staging {
             versionNameSuffix "-STAGING"
+            debuggable true
             signingConfig signingConfigs.debug
         }
         release {
