--- a/encryption/build.gradle
+++ b/encryption/build.gradle
@@ -14,37 +14,7 @@
  * limitations under the License.
  */
 
-apply plugin: 'com.android.library'
+apply plugin: 'java'
 
-android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    lintOptions {
-        abortOnError true
-        textOutput 'stdout'
-        xmlReport false
-        htmlReport true
-    }
-}
-
-dependencies {
-
-}
+targetCompatibility = '1.7'
+sourceCompatibility = '1.7'
