add a new build variant called release-fast that skips proguard to quicken up development when we don't want to switch back to dev or staging

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,11 @@ android {
             debuggable true
             signingConfig signingConfigs.debug
         }
+        release_fast {
+            versionNameSuffix "-RELEASE"
+            debuggable true
+            signingConfig signingConfigs.release
+        }
         release {
             minifyEnabled true
             shrinkResources true
