prevent login activity from spawning multiple instances

--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".LoginActivity"
             android:theme="@style/api_Theme.AppCompat.Translucent"
-            android:configChanges="keyboardHidden"/>
+            android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize"
+            android:launchMode="singleTask"/>
 
         <service
             android:name=".MessengerFirebaseMessagingService"
