fix dismissing messages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -201,6 +201,9 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".receiver.NotificationDismissedReceiver"
+            android:exported="false" />
+
         <service
             android:name=".service.HeadlessSmsSendService"
             android:exported="true"
