--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ USE_JACK=false
 ANDROID_SUPPORT_VERSION=24.2.0
 ANDROID_GRADLE_VERSION=2.1.0
 FIREBASE_VERSION=9.4.0
+GOOGLE_PLAY_SERVICES_VERSION=9.4.0
