Quick reply for Android Marshmallow and below
- Transparent activity for quick replies on < 7.0
- Handles wearable, Nougat, and older versions of android in the NotificationService
- Has tablet layout
- Can be debugged
- handles wearable replies from the quick reply activity
- shows conversations
- can be scrolled
- can be easily quit
- updates the read/seen statuses correctly and sends the to the backend
- end action to ime and handle hardkeyboard 'enter' button.
- dismiss the keyboard when sending a message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -134,6 +134,11 @@
             android:name="xyz.klinker.giphy.GiphyActivity"
             android:theme="@style/AppTheme.NoActionBar"
             tools:replace="android:theme" />
+        <activity android:name=".activity.NotificationReplyActivity"
+            android:theme="@style/api_Theme.AppCompat.Translucent"
+            android:windowSoftInputMode="adjustPan"
+            android:excludeFromRecents="true"
+            android:launchMode="singleInstance"/>
 
         <service android:name="com.android.mms.transaction.TransactionService" />
 
