--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:palette-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:percent:${ANDROID_SUPPORT_VERSION}"
+    compile 'com.stephentuso:welcome:0.7.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
     compile 'com.afollestad:easyvideoplayer:0.2.9'
