start building the intro activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -113,6 +113,8 @@
                 android:value=".service.MessengerChooserTargetService" />
         </activity>
 
+        <activity android:name=".activity.OnboardingActivity"
+            android:theme="@style/AppIntro" />
         <activity android:name=".activity.InitialLoadActivity"
             android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize" />
         <activity
