update gradle plugin to 2.14.1 and android gradle to 2.2-rc2

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ TARGET_SDK=24
 COMPILE_SDK=24
 USE_JACK=false
 
-ANDROID_GRADLE_VERSION=2.1.0
+ANDROID_GRADLE_VERSION=2.2.0-rc2
 BUILD_TOOLS_VERSION=24.0.2
 ANDROID_SUPPORT_VERSION=24.2.0
 
