use a receiver to get replies from Android auto. Fixes the issue with sending

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -226,6 +226,9 @@
         <receiver android:name=".receiver.NotificationDismissedReceiver"
             android:exported="false" />
 
+        <receiver android:name=".receiver.CarReplyReceiver"
+            android:exported="false" />
+
         <service
             android:name=".service.HeadlessSmsSendService"
             android:exported="true"
