--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -17,10 +17,22 @@
 <manifest package="xyz.klinker.messenger.api.implementation"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-feature android:name="android.software.leanback"
+        android:required="false" />
+
+    <uses-feature android:name="android.hardware.touchscreen"
+        android:required="false" />
+
     <application>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/api_Theme.AppCompat.Translucent"
+            android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize"
+            android:launchMode="singleTask"/>
+
+        <activity
+            android:name=".ActivateActivity"
+            android:theme="@style/api_Theme.AppCompat.Activate"
             android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize"
             android:launchMode="singleTask"/>
 
