--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
     compile "com.android.support:preference-v14:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:palette-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:percent:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:leanback-v17:${ANDROID_SUPPORT_VERSION}"
     compile 'com.github.paolorotolo:appintro:4.0.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
