--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.2"
     resourcePrefix 'api_'
 
     defaultConfig {
@@ -40,7 +40,7 @@ android {
 
     lintOptions {
         abortOnError true
-        disable 'InvalidPackage', "UnusedAttribute"
+        disable 'InvalidPackage', "UnusedAttribute", 'CommitPrefEdits', 'HardwareIds'
         textOutput 'stdout'
         xmlReport false
         htmlReport true
