add a service to check whether or not the content observer service is running. If not, restart it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -268,6 +268,7 @@
         <service android:name=".service.NotificationMarkReadService" />
         <service android:name=".service.ReplyService" />
         <service android:name=".service.ContentObserverService" />
+        <service android:name=".service.ContentObserverRunCheckService" />
         <service android:name=".service.ScheduledMessageService" />
         <service android:name=".service.ApiUploadService" />
         <service android:name=".service.ApiDownloadService" />
