add a media grid activity for when you click the 'view media' in the drawer or the overflow of a conversation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -154,6 +154,9 @@
             android:name=".activity.InitialLoadTvActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
+            android:name=".activity.MediaGridActivity"
+            android:theme="@style/AppTheme.NoColors" />
+        <activity
             android:name=".activity.ContactSettingsActivity"
             android:theme="@style/AppTheme.NoColors" />
         <activity
