--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
     compile 'com.klinkerapps:android-smsmms:3.2.0'
     compile 'com.klinkerapps:link_builder:1.3.2'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
+    compile 'com.klinkerapps:android-transcoder:1.0.0'
     compile 'com.larswerkman:lobsterpicker:1.0.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
     compile "com.google.firebase:firebase-crash:${FIREBASE_VERSION}"
