--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
         android:banner="@mipmap/ic_banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:largeHeap="true"
         android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
 
