add add an onboarding pager to give information about the service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -149,6 +149,8 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".activity.OnboardingActivity"
             android:theme="@style/AppIntro" />
+        <activity android:name=".activity.OnboardingPayWallActivity"
+            android:theme="@style/AppIntro" />
         <activity android:name=".activity.InitialLoadActivity"
             android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize" />
         <activity
